--- a/css/style.css
+++ b/css/style.css
@@ -14,19 +14,30 @@ h6 {
     font-family: "Roboto", sans-serif;
 }
 
+
+/* fontawesome */
+
+[class*="fontawesome-"]:before {
+    font-family: 'FontAwesome', sans-serif;
+}
+
 .clear-fix {
     overflow: auto;
 }
 
-.education-entry,
 .work-entry,
 .project-entry {
     padding: 0 5%;
 }
 
+.education-entry {
+  padding: 2% 5%;
+}
+
 h1 {
-    font-size: 40px;
+    color: #f5a623;
     line-height: 48px;
+    font-size: 2.3em;
     display: inline;
 }
 
@@ -41,7 +52,7 @@ h2 {
 h3 {
     font-style: italic;
     font-size: 20px;
-    color: #000;
+    color: #999;
     line-height: 22px;
 }
 
@@ -87,6 +98,10 @@ a {
     margin-top: 10px;
 }
 
+.block {
+    display: block;
+}
+
 .welcome-message {
     font-style: italic;
     font-size: 18px;
@@ -95,14 +110,15 @@ a {
 }
 
 #skills-h3 {
+    color: #f5ae23;
     display: none;
 }
 
-.second-color-bg {
+.orange {
     background-color: #f5ae23;
 }
 
-.second-color-text {
+.orange-text {
     color: #f5ae23;
 }
 
@@ -111,33 +127,27 @@ a {
     color: #fff;
 }
 
-.block {
-    display: block;
-}
-
-.main-color {
-    background-color: #484848;
-}
-
 .gray {
     background-color: #f3f3f3;
     padding-bottom: 10px;
     clear: both;
 }
 
+.dark-gray {
+    background-color: #4a4a4a;
+}
+
 
 /* TODO: Replace with image later */
 
-#main {
-  display:block;
+#header {
+    background-color: #484848;
 }
 
-input {
-    border: 2px;
-    //background: transparent;
-    outline: none;
-    width: 5%;
-    height: 2%;
+.role {
+    display: block;
+    text-align: right;
+    font-size: 1.3em;
 }
 
 .flex-box {
@@ -158,15 +168,6 @@ input {
 
 .center-content {
     padding: 2.5% 5%;
-}
-
-#footer {
-    display: flex;
-    justify-content: space-between;
-}
-
-.role {
-    margin-top: auto;
 }
 
 ul {
@@ -219,6 +220,10 @@ span {
     .welcome-message {
         display: none;
     }
+    #skills {
+      flex-direction: row;
+      justify-content: space-around;
+    }
 }
 
 #map {
@@ -228,7 +233,7 @@ span {
 }
 
 #mapDiv {
-    height: 70vh;
+    height: 400px;
     width: 100%;
     padding-bottom: 5%;
 }
